<resources>
    <string name="DEBUG_MODE">false</string>
    <string name="ERROR_MESSAGE_AUTHENTICATION_REQUIRED">Identity authentication required.</string>
    <string name="ERROR_MESSAGE_CLOUD_EMPTY">Cloud service return the empty result.</string>
    <string name="ERROR_MESSAGE_CREDIT_GRACE">The project has been out of credit and grace period is over</string>
    <string name="ERROR_MESSAGE_EMPTY">text for detect can not empty</string>
    <string name="ERROR_MESSAGE_INCORRECT_PARAMETER">Incorrect parameter. This exception is irrelevant to services.</string>
    <string name="ERROR_MESSAGE_INTERNAL_ERROR">Internal error.</string>
    <string name="ERROR_MESSAGE_INVOKE_FAIL">Internal error. Invoke cloud algorithm service fail.</string>
    <string name="ERROR_MESSAGE_IS_MAX_LENGTH">Cloud text max length 5000 words</string>
    <string name="ERROR_MESSAGE_LANGUAGE_SUPPORTED">Language is not supported.</string>
    <string name="ERROR_MESSAGE_MAXIMUM">The character number of translated and detected has reached the upper limit.</string>
    <string name="ERROR_MESSAGE_MAX_LENGTH">text max length is 5000</string>
    <string name="ERROR_MESSAGE_PARAMETER">The input parameter is incorrect.</string>
    <string name="FEATURE_AI_PREFERENCES_ENABLED">false</string>
    <string name="FEATURE_EMBROIDERY_PREFERENCES_ENABLED">false</string>
    <string name="FEATURE_PHIRO_PREFERENCES_ENABLED">false</string>
    <string name="SNACKBAR_HINTS_ENABLED">true</string>
    <string name="backpack">Backpack</string>
    <string name="cast_button_menu_item_title">Cast button</string>
    <string name="catblocks">Toggle 2D</string>
    <string name="catblocks_reorder">Clean up scripts</string>
    <string name="comment_in_out">Disable/enable</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="formula_editor_bracket_close">)</string>
    <string name="formula_editor_bracket_open">(</string>
    <string name="formula_editor_data">Data</string>
    <string name="formula_editor_decimal_mark">.</string>
    <string name="formula_editor_device">Sensors</string>
    <string name="formula_editor_functions">Functions</string>
    <string name="formula_editor_image_button_description_color_picker">color picker</string>
    <string name="formula_editor_image_button_description_delete">delete</string>
    <string name="formula_editor_image_button_description_functions_toggle">toggle functions</string>
    <string name="formula_editor_logic">Logic</string>
    <string name="formula_editor_object">Properties</string>
    <string name="formula_editor_operator_divide">÷</string>
    <string name="formula_editor_operator_minus">-</string>
    <string name="formula_editor_operator_mult">×</string>
    <string name="formula_editor_operator_plus">+</string>
    <string name="formula_editor_string">Abc</string>
    <string name="from_local">Add from local</string>
    <string name="main_menu_about">About this app</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_login">Login</string>
    <string name="main_menu_logout">Logout</string>
    <string name="main_menu_privacy_policy">Privacy Policy</string>
    <string name="main_menu_rate_app">Rate us!</string>
    <string name="main_menu_scratch_converter">Scratch converter</string>
    <string name="main_menu_terms_of_use">Terms of Use and Service</string>
    <string name="new_group">New group</string>
    <string name="new_scene">New scene</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="preference_description_accessibility">"Change the app's appearance"</string>
    <string name="preference_description_accessibility_beginner_bricks">Show only simple features.</string>
    <string name="preference_description_accessibility_category_icons">Add icons to categories and bricks.</string>
    <string name="preference_description_accessibility_category_icons_big">Increase icon size.</string>
    <string name="preference_description_accessibility_dragndrop_delay">"Drag'n'drop delay for bricks."</string>
    <string name="preference_description_accessibility_element_spacing">Increase element spacing in lists.</string>
    <string name="preference_description_accessibility_high_contrast">Increase the text contrast.</string>
    <string name="preference_description_accessibility_large_text">Increase the text size.</string>
    <string name="preference_description_accessibility_profiles">Pick a predefined accessibility profile</string>
    <string name="preference_description_ai">Enable AI bricks and sensors</string>
    <string name="preference_description_ai_face_detection">Enable face detection bricks and sensors</string>
    <string name="preference_description_ai_object_recognition">Enable object recognition and tracking sensors</string>
    <string name="preference_description_ai_pose_detection">Enable pose detection bricks and sensors</string>
    <string name="preference_description_ai_speech_recognition">Enable speech recognition bricks and sensors</string>
    <string name="preference_description_ai_speech_synthetization">Enable speech synthetization bricks and sensors</string>
    <string name="preference_description_ai_text_recognition">Enable text recognition bricks and sensors</string>
    <string name="preference_description_arduino_bricks">Allow the app to control Arduino boards</string>
    <string name="preference_description_cast_feature_globally_enabled">Show cast button and enable cast projects</string>
    <string name="preference_description_crash_reports">Allow the app to send crash reports automatically</string>
    <string name="preference_description_embroidery_bricks">Create patterns for stitching machines</string>
    <string name="preference_description_hints">Enable to show hints</string>
    <string name="preference_description_jumpingsumo_bricks">"Allow the app to control Parrot's Jumping Sumo robots"</string>
    <string name="preference_description_language">"Set the app's language"</string>
    <string name="preference_description_mindstorms_ev3_bricks">Allow the app to control Lego Mindstorms EV3 robots</string>
    <string name="preference_description_mindstorms_nxt_bricks">Allow the app to control Lego Mindstorms NXT robots</string>
    <string name="preference_description_multiplayer_variables_enabled">Allow the app to use multiplayer variables shared via Bluetooth</string>
    <string name="preference_description_nfc_bricks">Allow the app to use NFC tags in projects</string>
    <string name="preference_description_phiro_bricks">"Allow the app to control RobotixEdu's Phiro robots"</string>
    <string name="preference_description_plot_bricks">Create patterns for plotting machines</string>
    <string name="preference_description_quadcopter_bricks">Allow the app to control Parrot AR.Drone 2.0 quadcopters</string>
    <string name="preference_description_raspi_bricks">Allow the app to control Raspberry Pi computers</string>
    <string name="preference_description_test_bricks">Allows to create tests</string>
    <string name="preference_description_web_access">Edit to add or remove trusted domains</string>
    <string name="preference_raspi_enable_bricks">Enable bricks and sensors</string>
    <string name="preference_raspi_help">Help / getting started</string>
    <string name="preference_raspi_help_link">https://catrob.at/RaspberryPi</string>
    <string name="preference_raspi_help_summary">Get help on how to configure the connection settings</string>
    <string name="preference_raspi_host">Raspberry Pi IP-/host-address</string>
    <string name="preference_raspi_port">Raspberry Pi port</string>
    <string name="preference_title_accessibility">Accessibility</string>
    <string name="preference_title_accessibility_Brick_icons">Icons</string>
    <string name="preference_title_accessibility_beginner_bricks">Beginner mode</string>
    <string name="preference_title_accessibility_category_icons">Show icons</string>
    <string name="preference_title_accessibility_category_icons_big">Large icons</string>
    <string name="preference_title_accessibility_category_icons_high_contrast">High contrast icons</string>
    <string name="preference_title_accessibility_dragndrop_delay">"Drag'n'drop delay"</string>
    <string name="preference_title_accessibility_element_spacing">Large element spacing</string>
    <string name="preference_title_accessibility_font_style">Choose a text type</string>
    <string name="preference_title_accessibility_handling">Handling</string>
    <string name="preference_title_accessibility_high_contrast">High contrast</string>
    <string name="preference_title_accessibility_large_text">Large text</string>
    <string name="preference_title_accessibility_profile">Predefined profiles</string>
    <string name="preference_title_accessibility_profiles">Accessibility profiles</string>
    <string name="preference_title_accessibility_text_appearance">Text appearance</string>
    <string name="preference_title_ai">Artificial intelligence (AI) extension</string>
    <string name="preference_title_ai_face_detection">Face detection</string>
    <string name="preference_title_ai_object_recognition">Object recognition</string>
    <string name="preference_title_ai_pose_detection">Pose detection</string>
    <string name="preference_title_ai_speech_recognition">Speech recognition</string>
    <string name="preference_title_ai_speech_synthetization">Speech synthetization</string>
    <string name="preference_title_ai_text_recognition">Text recognition</string>
    <string name="preference_title_cast_feature_globally_enabled">Chromecast extension</string>
    <string name="preference_title_enable_arduino_bricks">Arduino extension</string>
    <string name="preference_title_enable_crash_reports">Sending anonymous crash reports</string>
    <string name="preference_title_enable_embroidery_bricks">Embroidery extension</string>
    <string name="preference_title_enable_hints">Show hints</string>
    <string name="preference_title_enable_jumpingsumo_bricks">Parrot Jumping Sumo extension</string>
    <string name="preference_title_enable_mindstorms_ev3_bricks">Lego Mindstorms EV3 extension</string>
    <string name="preference_title_enable_mindstorms_nxt_bricks">Lego Mindstorms NXT extension</string>
    <string name="preference_title_enable_nfc_bricks">Near Field Communication extension</string>
    <string name="preference_title_enable_phiro_bricks">"RobotixEdu's Phiro extension"</string>
    <string name="preference_title_enable_plot_bricks">Plot extension</string>
    <string name="preference_title_enable_quadcopter_bricks">Parrot AR.Drone 2.0 extension</string>
    <string name="preference_title_enable_raspi_bricks">Raspberry Pi extension</string>
    <string name="preference_title_enable_test_bricks">Testing extension</string>
    <string name="preference_title_language">Language</string>
    <string name="preference_title_multiplayer_variables_enabled">Multiplayer extension</string>
    <string name="preference_title_web_access">Web access</string>
    <string name="project_options">Project options</string>
    <string name="raspi_settings_gpio_version">GPIO Version</string>
    <string name="raspi_settings_title_name">Raspberry Pi settings</string>
    <string name="rename">Rename</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="show_details">Show details</string>
    <string name="undo">Undo</string>
</resources>