<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:title="@string/preference_title_language" android:key="setting_multilingual" android:summary="@string/preference_description_language" android:defaultValue="false" />
    <TrustListEditorPreference android:title="@string/preference_title_web_access" android:key="setting_trusted_domains" android:summary="@string/preference_description_web_access" android:defaultValue="" />
    <PreferenceScreen android:title="@string/preference_title_ai" android:key="setting_ai_screen" android:summary="@string/preference_description_ai" />
    <CheckBoxPreference android:title="@string/preference_title_multiplayer_variables_enabled" android:key="setting_multiplayer_variables_enabled" android:summary="@string/preference_description_multiplayer_variables_enabled" android:defaultValue="false" />
    <Preference android:title="@string/preference_title_enable_embroidery_bricks" android:key="setting_embroidery_bricks_preference" android:summary="@string/preference_description_embroidery_bricks" />
    <CheckBoxPreference android:title="@string/preference_title_enable_embroidery_bricks" android:key="setting_embroidery_bricks_checkbox_preference" android:summary="@string/preference_description_embroidery_bricks" android:defaultValue="@string/FEATURE_EMBROIDERY_PREFERENCES_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_enable_plot_bricks" android:key="setting_plot_bricks" android:summary="@string/preference_description_plot_bricks" android:defaultValue="@string/FEATURE_EMBROIDERY_PREFERENCES_ENABLED" />
    <PreferenceScreen android:title="@string/preference_title_enable_mindstorms_nxt_bricks" android:key="setting_nxt_screen" android:summary="@string/preference_description_mindstorms_nxt_bricks" />
    <PreferenceScreen android:title="@string/preference_title_enable_mindstorms_ev3_bricks" android:key="setting_ev3_screen" android:summary="@string/preference_description_mindstorms_ev3_bricks" />
    <PreferenceScreen android:title="@string/preference_title_enable_quadcopter_bricks" android:key="settings_drone_screen" android:summary="@string/preference_description_quadcopter_bricks" />
    <CheckBoxPreference android:title="@string/preference_title_enable_jumpingsumo_bricks" android:key="setting_parrot_jumping_sumo_bricks" android:summary="@string/preference_description_jumpingsumo_bricks" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/preference_title_enable_arduino_bricks" android:key="setting_arduino_bricks" android:summary="@string/preference_description_arduino_bricks" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/preference_title_enable_nfc_bricks" android:key="setting_nfc_bricks" android:summary="@string/preference_description_nfc_bricks" android:defaultValue="false" />
    <PreferenceScreen android:title="@string/preference_title_enable_raspi_bricks" android:key="settings_raspberry_screen" android:summary="@string/preference_description_raspi_bricks" />
    <Preference android:title="@string/preference_title_enable_phiro_bricks" android:key="setting_enable_phiro_bricks_preference" android:summary="@string/preference_description_phiro_bricks" />
    <CheckBoxPreference android:title="@string/preference_title_enable_phiro_bricks" android:key="setting_enable_phiro_bricks_checkbox_preference" android:summary="@string/preference_description_phiro_bricks" android:defaultValue="@string/FEATURE_PHIRO_PREFERENCES_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_cast_feature_globally_enabled" android:key="setting_cast_globally_enabled" android:summary="@string/preference_description_cast_feature_globally_enabled" android:defaultValue="false" />
    <PreferenceScreen android:title="@string/preference_title_accessibility" android:key="setting_accessibility_screen" android:summary="@string/preference_description_accessibility" />
    <CheckBoxPreference android:title="@string/preference_title_enable_hints" android:key="setting_enable_hints" android:summary="@string/preference_description_hints" android:defaultValue="@string/SNACKBAR_HINTS_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_enable_test_bricks" android:key="setting_test_bricks" android:summary="@string/preference_description_test_bricks" android:defaultValue="@string/DEBUG_MODE" />
    <CheckBoxPreference android:title="@string/preference_title_enable_crash_reports" android:key="setting_enable_crash_reports" android:summary="@string/preference_description_crash_reports" android:defaultValue="true" />
</PreferenceScreen>
