<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/preference_title_ai" android:key="settings_ai_screen" android:summary="@string/preference_description_ai"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/preference_title_ai_speech_recognition" android:key="setting_ai_speech_recognition" android:summary="@string/preference_description_ai_speech_recognition" android:defaultValue="@string/FEATURE_AI_PREFERENCES_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_ai_speech_synthetization" android:key="setting_ai_speech_synthetization" android:summary="@string/preference_description_ai_speech_synthetization" android:defaultValue="@string/FEATURE_AI_PREFERENCES_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_ai_face_detection" android:key="setting_ai_face_detection" android:summary="@string/preference_description_ai_face_detection" android:defaultValue="@string/FEATURE_AI_PREFERENCES_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_ai_pose_detection" android:key="setting_ai_pose_detection" android:summary="@string/preference_description_ai_pose_detection" android:defaultValue="@string/FEATURE_AI_PREFERENCES_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_ai_text_recognition" android:key="setting_ai_text_recognition" android:summary="@string/preference_description_ai_text_recognition" android:defaultValue="@string/FEATURE_AI_PREFERENCES_ENABLED" />
    <CheckBoxPreference android:title="@string/preference_title_ai_object_recognition" android:key="setting_ai_object_detection" android:summary="@string/preference_description_ai_object_recognition" android:defaultValue="@string/FEATURE_AI_PREFERENCES_ENABLED" />
</PreferenceScreen>
