<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/icon_undo" android:id="@id/menu_undo" android:visible="false" android:title="@string/undo" app:showAsAction="ifRoom" />
    <item android:id="@id/backpack" android:visible="true" android:title="@string/backpack" app:showAsAction="never" />
    <item android:id="@id/copy" android:title="@string/copy" app:showAsAction="never" />
    <item android:id="@id/delete" android:title="@string/delete" app:showAsAction="never" />
    <item android:id="@id/rename" android:title="@string/rename" app:showAsAction="never" />
    <item android:id="@id/show_details" android:title="@string/show_details" app:showAsAction="never" />
    <item android:id="@id/comment_in_out" android:visible="false" android:title="@string/comment_in_out" app:showAsAction="never" />
    <item android:id="@id/find" android:title="@string/search" app:showAsAction="never" />
    <item android:id="@id/catblocks" android:title="@string/catblocks" app:showAsAction="never" />
    <item android:id="@id/catblocks_reorder_scripts" android:title="@string/catblocks_reorder" app:showAsAction="never" />
    <item android:icon="@drawable/ic_search" android:id="@id/search" android:visible="false" app:showAsAction="ifRoom" />
</menu>