<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/preference_title_enable_raspi_bricks" android:key="settings_raspberry_screen" android:summary="@string/preference_description_raspi_bricks"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/preference_title_enable_raspi_bricks" android:key="setting_raspi_bricks" android:summary="@string/preference_raspi_enable_bricks" android:defaultValue="false" />
    <PreferenceCategory android:title="@string/raspi_settings_title_name" android:key="setting_raspi_connection_settings_category">
        <PreferenceScreen android:title="@string/preference_raspi_help" android:summary="@string/preference_raspi_help_summary">
            <intent android:action="android.intent.action.VIEW" android:data="@string/preference_raspi_help_link" />
        </PreferenceScreen>
        <EditTextPreference android:title="@string/preference_raspi_host" android:key="setting_raspi_host_preference" android:defaultValue="192.168.0.1" />
        <EditTextPreference android:title="@string/preference_raspi_port" android:key="setting_raspi_port_preference" android:defaultValue="10000" android:inputType="number" />
        <ListPreference android:entries="@array/raspi_version_spinner_names" android:title="@string/raspi_settings_gpio_version" android:key="setting_raspi_version_preference" android:summary="%s" android:defaultValue="a01041" android:entryValues="@array/raspi_version_spinner_revisions" />
    </PreferenceCategory>
</PreferenceScreen>